# naosoccer_pos_action

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
.github/workflows/: build_and_test_humble.yaml  main.yml
include/naosoccer_pos_action/: key_frame.hpp  naosoccer_pos_action_node.hpp
naosoccer_pos_action/: CMakeLists.txt  package.xml
naosoccer_pos_action/include/naosoccer_pos_action/: key_frame.hpp  naosoccer_pos_action_node.hpp
naosoccer_pos_action/pos/: leg_swing.pos  move_head.pos  move_head_2.pos  only_legs.pos  talking.pos  test_head.pos  tilt.pos
naosoccer_pos_action/src/: indexes.hpp  naosoccer_pos_action_node.cpp  naosoccer_pos_action_server.cpp  parser.cpp  parser.hpp
naosoccer_pos_action/test/: test_parser.cpp
naosoccer_pos_action_interfaces/: CMakeLists.txt  package.xml
naosoccer_pos_action_interfaces/action/: Action.action
pos/: lower_arms.pos  tilt.pos
src/: indexes.hpp  linear.cpp  naosoccer_pos_action_node.cpp  parser.cpp
test/: CMakeLists.txt  test_parser.cpp
